# JYEngine2

./: .gitignore  CMakeLists.txt  CPlatform.txt  README.md  VSCompileLink.txt  default_lists.cmake
Core/: CMakeLists.txt  Configure.h  Core.h  EnableIf.h  EnumClassFlags.h  EnumTrans.cpp  EnumTrans.h  Main.cpp  Main.h  MainMacro.h  Nonclearvector.hpp  Object.cpp  Object.h  Pointer.h  Priority.cpp  Priority.h  Property.h  PropertyMacro.h  Reference.h  Resource.cpp  Resource.h  ResourceArray.h  Rtti.cpp  Rtti.h  RttiMacro.h  RttiManager.cpp  RttiManager.h  Stream.cpp  Stream.h  StringHash.cpp  StringHash.h  TEnumAsByte.h  ThreadSafeCounter.h  Type.h
Core/Interface/: IApplication.cpp  IApplication.h  IConfig.h  IConfigSystem.cpp  IConfigSystem.h  IFile.h  IFileSystem.cpp  IFileSystem.h  ILoader.h  ILogSystem.cpp  ILogSystem.h  IModuleInterface.h  IModuleManager.cpp  IModuleManager.h  IResourceSystem.cpp  IResourceSystem.h  IScriptSystem.cpp  IScriptSystem.h  ITimeSystem.cpp  ITimeSystem.h  IWindow.cpp  IWindow.h
Core/Propery/: InputPropery.h  ResourceProperty.h  TouchInput.h
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  GraphicDefine.h  IGraphicSystem.cpp  IGraphicSystem.h  ProjectSetting.cpp  ProjectSetting.h  ViewResolution.h
Engine/component/: Animatable.cpp  Animatable.h  Component.cpp  Component.h  GizmoConfig.h
Engine/graphic/: IAsyncResource.h  ITextureResource.cpp  ITextureResource.h  IndicesBufferResource.cpp  IndicesBufferResource.h  MaterialResource.cpp  MaterialResource.h  RenderObjectResource.cpp  RenderObjectResource.h  RenderTargetResource.cpp  RenderTargetResource.h  VertexBufferResource.cpp  VertexBufferResource.h
Engine/object/: GObject.cpp  GObject.h  IMessage.h  ObjectIdAllocator.cpp  ObjectIdAllocator.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/pipeline/: ContextUntil.cpp  ContextUntil.h  IRenderLoop.cpp  IRenderLoop.h  InstanceBatcher.cpp  InstanceBatcher.h  PipelineContex.h  PipelineSystem.cpp  PipelineSystem.h  RenderContext.cpp  RenderContext.h  RenderPipe.cpp  RenderPipe.h  RenderUntil.cpp  RenderUntil.h
Engine/platform/: PlatformEngine.h
Engine/private/: Define.cpp  Define.h
Engine/queue/: ILightQueue.cpp  ILightQueue.h  IRenderQueue.cpp  IRenderQueue.h  LightQueueSystem.cpp  LightQueueSystem.h  RenderQueueSystem.cpp  RenderQueueSystem.h
Engine/render/: IndicesBufferEntity.cpp  IndicesBufferEntity.h  IndicesStream.cpp  IndicesStream.h  RenderObjectEntity.cpp  RenderObjectEntity.h  RenderTargetEntity.cpp  RenderTargetEntity.h  RenderTargetEntity.inl  SubMesh.cpp  SubMesh.h  VertexBufferEntity.cpp  VertexBufferEntity.h  VertexStream.cpp  VertexStream.h  VertexStreamLayout.h
Engine/resource/: GeneralMetadata.cpp  GeneralMetadata.h  IAsyncEntity.cpp  IAsyncEntity.h  IAsyncSource.cpp  IAsyncSource.h  IMetadata.cpp  IMetadata.h  IResourceEntity.cpp  IResourceEntity.h  ISharedSource.cpp  ISharedSource.h  IndicesMetadata.cpp  IndicesMetadata.h  MaterialMetadata.cpp  MaterialMetadata.h  MaterialStreamData.cpp  MaterialStreamData.h  RenderObjectMetadata.cpp  RenderObjectMetadata.h  RenderTargetMetadata.cpp  RenderTargetMetadata.h  ShapeBufferUtility.cpp  ShapeBufferUtility.h  TextureMetadata.cpp  TextureMetadata.h  VertexMetadata.cpp  VertexMetadata.h
Executable/Editor/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  CMakeLists.txt  GlfwCallback.h  main.cpp
Function/Meteor/: CMakeLists.txt  Meteor.cpp  Meteor.h  PluginEntry.cpp  PluginEntry.h
Math/: 3DMath.h  AABB.cpp  AABB.h  Box2d.cpp  Box2d.h  CMakeLists.txt  Color.cpp  Color.h  CubicBezier.cpp  CubicBezier.h  Frustum.cpp  Frustum.h  IntRect.cpp  IntRect.h  IntVec2.cpp  IntVec2.h  IntVec3.cpp  IntVec3.h  IntVec4.cpp  IntVec4.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Math.cpp  Math.h  MathUtil.cpp  MathUtil.h  MathUtil.inl  Matrix4fArray.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  (+11 more)
Plugin/ConfigSystem/: CMakeLists.txt  ConfigSystem.cpp  ConfigSystem.h  JsonConfig.cpp  JsonConfig.h  PluginEntry.cpp  PluginEntry.h
Plugin/FileSystem/: BaseFile.cpp  BaseFile.h  CDirEntry.cpp  CDirEntry.h  CMakeLists.txt  FileSystem.cpp  FileSystem.h  PackageFile.cpp  PackageFile.h  PluginEntry.cpp  PluginEntry.h  UsualFile.cpp  UsualFile.h  ZippedFile.cpp  ZippedFile.h
Plugin/FlatSerializeSystem/: CMakeLists.txt  FlatDecoder.cpp  FlatDecoder.h  FlatEncoder.cpp  FlatEncoder.h  FlatSerializer.cpp  FlatSerializer.h  FlatSerializerSystem.cpp  FlatSerializerSystem.h  PluginEntry.cpp  PluginEntry.h  generic.fbs  generic_generated.h
Plugin/LuaScriptSystem/: BindingCore.cpp  BindingCore.h  BindingEngine.cpp  BindingEngine.h  BindingEngineEntity.cpp  BindingMath.cpp  BindingMath.h  CMakeLists.txt  LuaScriptSystem.cpp  LuaScriptSystem.h  PluginEntry.cpp  PluginEntry.h
Plugin/ResourceSystem/: BundleReader.cpp  BundleReader.h  CMakeLists.txt  MatLoader.cpp  MatLoader.h  MeshCache.cpp  MeshCache.h  MeshLoader.cpp  MeshLoader.h  PluginEntry.cpp  PluginEntry.h  ResourceSystem.cpp  ResourceSystem.h  TexMetaLoader.cpp  TexMetaLoader.h  TextureLoader.cpp  TextureLoader.h
System/: CMakeLists.txt  DataStruct.cpp  DataStruct.h  Delegate.cpp  Delegate.h  Macros.h  PlatformMisc.h  SafeQueue.h  Singleton.hpp  System.h  TypeHash.h  Utility.hpp
System/Platform/: PlatformConfig.h  ThreadSafeOprator.h
Test/TestModule/: CMakeLists.txt  TestObject.cpp  TestObject.h  main.cpp  test_stream
Third/LuaVMLib/: CMakeLists.txt  ldump.c  lundump.c
Third/bgfx/: CMakeLists.txt
Third/bx/: CMakeLists.txt
Third/glad/: CMakeLists.txt  glad.h
Third/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_user.h  imgui_user.inl  imgui_widgets.cpp  imguizmo.cpp  imguizmo.h  imstb_rectpack.h
Third/libexif/: CMakeLists.txt  config.h
Third/liblz4/: CMakeLists.txt
Third/libzip/: CMakeLists.txt
Third/lua-cjson/: CMakeLists.txt  define.h  fpconv.h  lua_cjson.c  strbuf.h
Third/luafilesystem/: CMakeLists.txt
Third/luasocket/: CMakeLists.txt
Third/mcpp-2.7.2/: CMakeLists.txt
(+594 files in other folders)
